# chess-cg

./: .gitignore  Makefile  README.md  frontend-audit-report.md  nginx.conf  pyrightconfig.json
.github/workflows/: deploy-backend.yml  deploy.yml  renew-ssl-certificate.yml
backend/: .gitignore  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dd1a20b7ae4_add_loadout_to_users.py  26b136ecf4ca_make_player_ids_nullable_for_guest_games.py  42aafc3b0ce3_make_elo_column_nullable.py  4549b0ad20e0_add_index_to_refresh_tokens_expires_at.py  53a8280500ed_remove_unused_fields_from_refresh_.py  56f4622528eb_add_last_activity_at_to_users.py  5af87c634130_add_users_table.py  682092742fe1_add_end_reason_to_chess_games.py  87d62e3284c9_add_refresh_tokens_table.py  a7237e3cad8e_add_elo_field_to_users_table.py  ca5e4b6ce112_add_chess_game_model.py  e7c09e5eb722_add_user_type_column.py
backend/app/: auth.py  database.py  db_models.py  main.py  models.py
backend/app/routers/: auth.py  cookie_utils.py  debug.py  game.py  health.py  websocket.py
backend/app/svc/: database_service.py  elo_service.py  game_service.py  room.py  time_manager.py  websocket_handler.py
backend/tests/: test_chess_board.py  test_regressions.py
frontend/chess-cg-ui/: package-lock.json  package.json  tsconfig.json
frontend/chess-cg-ui/public/: 404.html  index.html  manifest.json
frontend/chess-cg-ui/src/: App.css  App.module.css  App.tsx  index.css  socket.tsx  utils.ts
frontend/chess-cg-ui/src/components/: AuthCallback.module.css  AuthCallback.tsx  AuthError.tsx  AuthSuccess.tsx  Board.module.css  Board.tsx  Button.tsx  ConnectionStatus.tsx  DrawResignButtons.tsx  Events.tsx  GameOver.tsx  GamePanel.tsx  GameView.module.css  GameView.tsx  Modifiers.module.css  Modifiers.tsx  Piece.tsx  PromotionSelector.tsx  Square.tsx  Tile.tsx  Timer.module.css  Timer.tsx  UsernameEditModal.module.css  UsernameEditModal.tsx
frontend/chess-cg-ui/src/config/: environment.ts
frontend/chess-cg-ui/src/hooks/: useAuth.ts
frontend/chess-cg-ui/src/services/: auth.ts  cookieAuth.ts  gameService.ts
frontend/chess-cg-ui/src/styles/: utilities.module.css
frontend/chess-cg-ui/src/utils/: modifierIcons.tsx
websocket/: Makefile  pyproject.toml  read_pgn.py  test_piece_types.py
websocket/src/: main.py
websocket/src/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
websocket/src/svc/: room.py
websocket/tests/: test_chess_board.py
