[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["drewroen <drewroen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-socketio = "^5.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
