[project]
name = "src"
dynamic = ["version"]
description = 'Chess CG'
readme = "README.md"
requires-python = ">=3.12"
dependencies=[
    "flask-socketio>=5.5.0",
    "flask>=3.1.0",
    "types-flask-socketio>=5.4.0.20241224",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "watchdog>=6.0.0",
]
